Support Spark 1.4.1, update default Spark to 1.4.1-bin-hadoop2.6.
Support Storm 0.9.5, update default Storm to 0.9.5.
Support Pig 0.15.0, update default Pig to 0.15.0.
Support Hbase 0.99.2.
Support Hbase 1.1.1, update default Hbase to 1.1.1.
Support ZOOKEEPER_DATA_DIR_CLEAR.
Fix corner case in Storm wordcount test.
Increase time for Hbase master to be brought up.

magpie 1.60
-----------
Add support for job submission via LSF+Mpirun.
Support HADOOP_PER_JOB_HDFS_PATH and ZOOKEEPER_PER_JOB_DATA_DIR.
Support HADOOP_HDFS_PATH_CLEAR
Adjust MAGPIE_SUBMISSION_TYPE names given new script directories in 1.59
  - slurmsbatch -> sbatchsrun
  - msubslurm -> msubslurmsrun
  - msubtorque -> msubtorquepdsh
  - Backwards compatibility with older names is still supported.
Support the ability to run Magpie in environments without /tmp or a
  very small amount of space in /tmp.
  - Support MAGPIE_NO_LOCAL_DIR option.  See README.no-local-dir for details.
  - Remove ZOOKEEPER_FILESYSTEM_MODE setting.
    - Add node rank into all ZOOKEEPER_DATA_DIR paths, ensuring it is unique
      regardless if it is a network or local fs path.
    *** This may potentially break backwards compatability with Zookeeper
        data that may already exist on network file systems. ***
  - Remove SPARK_LOCAL_SCRATCH_DIR_TYPE setting.
    - Add node rank into all scratch directory paths, ensuring it is
      unique regardless if it is a network or local fs path.
  - By default, set java.io.tmpdir to a local scratch space in all projects
  - By default, set java.io.tmpdir in PIG_OPTS when running Pig. 
  - Disable Java hsperfdata if MAGPIE_NO_LOCAL_DIR set.

magpie 1.59
-----------
Rename submission script directories to include launching mechansim
  script-msub-slurm/ -> script-msub-slurm-srun/
  script-msub-torque/ -> script-msub-torque-pdsh/
  script-sbatch/ -> script-sbatch-srun/
Various documentation fixes
Few minor bug fixes

magpie 1.58
-----------