@@ -122,6 +122,21 @@
     The port at which the clients will connect.</description>
   </property>
 
+ <property>
+    <name>zookeeper.session.timeout</name>
+    <value>ZOOKEEPERSESSIONTIMEOUT</value>
+    <description>ZooKeeper session timeout in milliseconds. It is used in two different ways.
+      First, this value is used in the ZK client that HBase uses to connect to the ensemble.
+      It is also used by HBase when it starts a ZK server and it is passed as the 'maxSessionTimeout'. See
+      http://hadoop.apache.org/zookeeper/docs/current/zookeeperProgrammers.html#ch_zkSessions.
+      For example, if a HBase region server connects to a ZK ensemble that's also managed by HBase, then the
+      session timeout will be the one specified by this configuration. But, a region server that connects
+      to an ensemble managed with a different configuration will be subjected that ensemble's maxSessionTimeout. So,
+      even though HBase might propose using 90 seconds, the ensemble can have a max timeout lower than this and
+      it will take precedence. The current default that ZK ships with is 40 seconds, which is lower than HBase's.
+    </description>
+  </property>
+
   <!--Miscellaneous configuration-->
 
   <!-- Effectively disable major compaction by setting to 4 weeks,
